
- small tweaks to dockerfiles

  1.1.13

- Small tweaks to query params setup

  1.1.14

- Added support for a /statistieken pagina
- Copy changes

  1.1.15

- Added support for sorting inside the table
- Copy changes

  1.2.0

- Added support for direct navigation to publication
- Extra icon for navigating to publication page

  1.2.1

- Added script to generate overview of all organizations and their titles
- Bumped minimal Node version to 18

  1.2.2

- added the following keys

* Date for the start of a public review
* Date for the end of a public review
* Date for the end of a publication (new version of the publication, deprecated,...)

  1.2.3

* Reordered the table view of the standards

  1.3.0

* Translation of the application to English

  1.3.1

* Reverted back to default language and removed unneeded console logs

  1.3.2

* Rename NPM_AUTH_TOKEN to NPM_TOKEN
* Disabled detectBrowserLanguage from i18n
* Added translation logic to all pages

  1.4.0

* Added full support for Markdown files in the publication

  1.5.0

* Fully switch to multilangual support for the specifications
* Bumped minimal Node version and added support for Node 20

  1.5.1

* Small tweaks to the slug page and index page

  1.5.2

* Small addition to the filter to use `Candidate standard` instead of `candidate-standard` and `Standard-in-development` instead of `standard-in-development`

  1.6.0

* Use URIs for statuses and added extra status for recalled, replaced, outdated and note working group standards

  1.6.1

* Fix for the status of the standard not being present in the detail page https://github.com/Informatievlaanderen/OSLO-Standaardenregister/issues/36

  1.7.0

* Introduction of Knowledge graph on a separate page /standaarden/knowledge-graph

  1.8.0

* Use URIs for the type of standard and use URI for the usage of the standard

  1.8.1

* Fallback for when the `resourceReference` is not present in the standard
* Made the URIs category, type and usage an anchor tag