@@ -93,3 +93,4 @@
 
 * Fallback for when the `resourceReference` is not present in the standard
 * Made the URIs category, type and usage an anchor tag
+* Replaced cloudfront URL with the new CDN URL: ui.vlaanderen.be
